fix: header popup proper z-index

--- a/web/src/sass/components/_header-popup.scss
+++ b/web/src/sass/components/_header-popup.scss
@@ -2,6 +2,7 @@
 	position: absolute;
 	top: 100%;
 	left: 0;
+	z-index: 0;
 	width: 100%;
 	padding-top: 17px;
 	padding-right: 50px;
