--- a/web/src/sass/components/_menu-desktop.scss
+++ b/web/src/sass/components/_menu-desktop.scss
@@ -2,6 +2,7 @@
 	display: flex;
 	align-items: center;
 	position: relative;
+	z-index: 1;
 	height: 100px;
 	padding: 0 50px;
 	background-color: transparent;
@@ -93,8 +94,8 @@
 			display: block;
 			width: 100%;
 			height: auto;
-			object-fit: contain;
 			transform: translateY(-5px);
+			object-fit: contain;
 		}
 	}
 
