--- a/web/src/sass/components/_menu-mobile.scss
+++ b/web/src/sass/components/_menu-mobile.scss
@@ -1,5 +1,6 @@
 .menu-mobile {
 	position: relative;
+	z-index: 1;
 	width: 100%;
 	height: auto;
 
@@ -28,9 +29,9 @@
 		}
 
 		img {
-			object-fit: contain;
 			width: 100%;
 			height: auto;
+			object-fit: contain;
 		}
 	}
 
